tests/paczka1/small_fuzzy/12545387.err
Error in line 3: S115 A283 27,8
Error in line 6: vd3N5dAE A283 14,9
Error in line 7: IfF A283 68,4
Error in line 12: DQpa1eU S115 30,6
Error in line 10: uIVWhln2LfP S115 44,5
Error in line 14: DQpa1eU A283 93,8
